--- a/Enviroment/http-folder/index.html
+++ b/Enviroment/http-folder/index.html
@@ -14,11 +14,19 @@
         </div>
     </header>
     <div class="container">
-
-        <div class="row my-2">
-            <div class="col-4 from-group"><label for="message">Mensaje:</label><input class=" form-control ms-2" type="text" id="message" /></div>
-            <div class="col-4 d-flex"><button class=" btn btn-primary mt-auto " onclick="guardarMensaje()">Guardar Mensaje</button></div>
+        <div class="card m-2">
+            <div class="card-header">
+                <h3>Agregar un Comentario</h3>
+            </div>
+            <div class="card-body">
+                <div class="d-flex my-2">
+                    <div class="from-group"><label for="message">Mensaje:</label><input class=" form-control ms-2" type="text" id="message" /></div>
+                    <div class="d-flex ms-3"><button class=" btn btn-primary mt-auto " onclick="guardarMensaje()">Guardar Mensaje</button></div>
+                </div>
+            </div>
         </div>
+        7a62d247ffd4604ddbcdbb444da4d865
+
 
         <div class="row">
             <div class="col-4">
