--- a/Enviroment/http-folder/index.html
+++ b/Enviroment/http-folder/index.html
@@ -3,64 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Wiki: Tipología de las TIC</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f7f7f7;
-        }
-
-        header {
-            background-color: #007BFF;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
-
-        h1 {
-            font-size: 28px;
-        }
-
-        p {
-            font-size: 16px;
-            line-height: 1.6;
-        }
-
-        .section {
-            background-color: #fff;
-            padding: 20px;
-            margin: 20px 0;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-
-        .section h2 {
-            font-size: 24px;
-        }
-
-        .section ul {
-            list-style-type: disc;
-            margin-left: 20px;
-        }
-
-        .section a {
-            color: #007BFF;
-            text-decoration: none;
-        }
-
-        .section a:hover {
-            text-decoration: underline;
-        }
-
-        footer {
-            background-color: #007BFF;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -68,16 +12,24 @@
     </header>
     <div class="section">
         <h2>Introducción</h2>
-        <p>Las Tecnologías de la Información y Comunicación (TIC) se refieren al conjunto de tecnologías que permiten la adquisición, producción, almacenamiento, procesamiento, comunicación de información, así como el acceso a la misma. Las TIC desempeñan un papel fundamental en la sociedad moderna y tienen diversas aplicaciones en áreas como la educación, la comunicación, la medicina y más.</p>
+        <div class="card">
+            <h3><a href="introduccion.html">Más información</a></h3>
+        </div>
     </div>
     <div class="section">
         <h2>Clasificación de las TIC</h2>
-        <ul>
-            <li><a href="#">TIC de Comunicación</a></li>
-            <li><a href="#">TIC de Procesamiento de Datos</a></li>
-            <li><a href="#">TIC de Almacenamiento de Información</a></li>
-            <li><a href="#">TIC de Entretenimiento</a></li>
-        </ul>
+        <div class="card">
+            <h3><a href="comunicacion.html">TIC de Comunicación</a></h3>
+        </div>
+        <div class="card">
+            <h3><a href="procesamiento.html">TIC de Procesamiento de Datos</a></h3>
+        </div>
+        <div class="card">
+            <h3><a href="almacenamiento.html">TIC de Almacenamiento de Información</a></h3>
+        </div>
+        <div class="card">
+            <h3><a href="entretenimiento.html">TIC de Entretenimiento</a></h3>
+        </div>
     </div>
     <footer>
         Wiki sobre la Tipología de las TIC &copy; 2023
