--- a/Enviroment/http-folder/index.html
+++ b/Enviroment/http-folder/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Wiki: Tipología de las TIC</title>
 </head>
+
 <body>
     <header>
         <h1>Tipología de las TIC</h1>
@@ -13,26 +15,173 @@
     <div class="section">
         <h2>Introducción</h2>
         <div class="card">
-            <h3><a href="introduccion.html">Más información</a></h3>
+            <details>
+                <summary>Más información</summary>
+                <p>Las Tecnologías de la Información y Comunicación (TIC) se refieren al conjunto de tecnologías que
+                    permiten la adquisición, producción, almacenamiento, procesamiento, comunicación de información, así
+                    como el acceso a la misma. Las TIC desempeñan un papel fundamental en la sociedad moderna y tienen
+                    diversas aplicaciones en áreas como la educación, la comunicación, la medicina y más.</p>
+                <img src="../img/introduccion.jpg" alt="Introducción a las TIC" width="300">
+            </details>
         </div>
-    </div>
+    </div>    
     <div class="section">
-        <h2>Clasificación de las TIC</h2>
+        <h2>Clasificacion</h2>
         <div class="card">
-            <h3><a href="comunicacion.html">TIC de Comunicación</a></h3>
+            <details>
+                <summary>TIC de Comunicación</summary>
+                <img src="telefonia-movil.jpg" alt="Telefonía Móvil">
+                <p>Las TIC de Comunicación se refieren a un conjunto de tecnologías que facilitan la transmisión de
+                    información y la interacción entre individuos, grupos y sistemas. Estas tecnologías han
+                    revolucionado la forma en que nos comunicamos y conectamos a nivel global, transformando la manera
+                    en que compartimos información y colaboramos en distintos contextos. A continuación, se detallan
+                    algunos aspectos clave de las TIC de Comunicación:</p>
+                <ul>
+                    <li><strong>Telefonía Móvil:</strong> Uno de los avances más significativos en las TIC de
+                        Comunicación ha sido el desarrollo de la telefonía móvil. Los teléfonos inteligentes permiten la
+                        comunicación instantánea a través de llamadas, mensajes de texto, correos electrónicos y
+                        aplicaciones de mensajería como WhatsApp y Telegram.</li>
+                    <li><strong>Redes Sociales:</strong> Las redes sociales han cambiado la forma en que nos conectamos
+                        y compartimos información en línea. Plataformas como Facebook, Twitter, Instagram y LinkedIn
+                        permiten la interacción social, la creación de comunidades y el intercambio de contenido
+                        multimedia.</li>
+                    <li><strong>Videoconferencia:</strong> Las herramientas de videoconferencia, como Zoom y Microsoft
+                        Teams, han ganado una importancia significativa en el ámbito laboral y educativo. Facilitan las
+                        reuniones virtuales y la colaboración a distancia, permitiendo a las personas conectarse en
+                        tiempo real desde cualquier parte del mundo.</li>
+                    <li><strong>Comunicación Multimedia:</strong> Las TIC de Comunicación también incluyen la
+                        transmisión de contenido multimedia. Plataformas de streaming de video como YouTube y servicios
+                        de transmisión de música han transformado la forma en que consumimos entretenimiento y contenido
+                        informativo.</li>
+                    <li><strong>Comunicación Global:</strong> Estas tecnologías han reducido las barreras geográficas y
+                        culturales en la comunicación. Las personas pueden comunicarse, colaborar y compartir
+                        información con individuos y grupos de todo el mundo de manera instantánea.</li>
+                    <li><strong>Seguridad de la Comunicación:</strong> La seguridad en la comunicación es un aspecto
+                        fundamental de las TIC de Comunicación. Se utilizan protocolos de cifrado y medidas de seguridad
+                        para proteger la privacidad y la confidencialidad de la información transmitida.</li>
+                    <li><strong>Tendencias Futuras:</strong> Las TIC de Comunicación siguen evolucionando con la
+                        incorporación de tecnologías emergentes como la 5G, la inteligencia artificial y la realidad
+                        aumentada. Estas tecnologías prometen una comunicación aún más rápida, interactiva y
+                        enriquecedora.</li>
+                </ul>
+            </details>
         </div>
         <div class="card">
-            <h3><a href="procesamiento.html">TIC de Procesamiento de Datos</a></h3>
+            <details>
+                <summary>TIC de Procesamiento de Datos</summary>
+                <img src="telefonia-movil.jpg" alt="Telefonía Móvil">
+                <p>Las TIC de Procesamiento de Datos se centran en las tecnologías que permiten la recopilación, el
+                    almacenamiento, el procesamiento y la gestión de información y datos. Estas tecnologías son
+                    fundamentales en la era digital y tienen un impacto significativo en diversos campos. A
+                    continuación, se detallan algunos aspectos clave de las TIC de Procesamiento de Datos:</p>
+                <ul>
+                    <li><strong>Big Data:</strong> El procesamiento de grandes volúmenes de datos, conocido como Big
+                        Data, es una parte integral de estas tecnologías. Permite analizar información masiva para
+                        extraer conocimientos, patrones y tendencias.</li>
+                    <li><strong>Base de Datos:</strong> Las bases de datos son componentes esenciales en el
+                        procesamiento de datos. Sistemas de gestión de bases de datos (DBMS) como MySQL, Oracle y
+                        MongoDB se utilizan para almacenar y administrar información de manera eficiente.</li>
+                    <li><strong>Análisis de Datos:</strong> Las TIC de Procesamiento de Datos incluyen herramientas y
+                        técnicas para el análisis de datos. Esto implica la aplicación de algoritmos y modelos
+                        estadísticos para obtener información valiosa a partir de los datos.</li>
+                    <li><strong>Automatización:</strong> La automatización de procesos mediante el uso de tecnologías
+                        como RPA (Automatización de Procesos Robóticos) es parte integral de estas TIC. Permite la
+                        ejecución de tareas repetitivas de manera eficiente.</li>
+                    <li><strong>Seguridad de Datos:</strong> La seguridad de los datos es una preocupación fundamental.
+                        Se utilizan medidas de seguridad como cifrado y autenticación para proteger la integridad y la
+                        confidencialidad de la información.</li>
+                    <li><strong>Inteligencia Artificial:</strong> La inteligencia artificial (IA) se utiliza para
+                        mejorar el procesamiento de datos mediante la automatización de tareas, el aprendizaje
+                        automático y la toma de decisiones basada en datos.</li>
+                    <li><strong>Aplicaciones Empresariales:</strong> Estas tecnologías se aplican en empresas para la
+                        gestión de recursos, la toma de decisiones informadas y la mejora de la eficiencia operativa.
+                    </li>
+                    <li><strong>Tendencias Futuras:</strong> El avance continuo en el procesamiento de datos incluye la
+                        adopción de tecnologías como la computación en la nube, el edge computing y el procesamiento
+                        cuántico.</li>
+                </ul>
+            </details>
         </div>
         <div class="card">
-            <h3><a href="almacenamiento.html">TIC de Almacenamiento de Información</a></h3>
+            <details>
+                <summary>TIC de Almacenamiento de Información</summary>
+                <img src="telefonia-movil.jpg" alt="Telefonía Móvil">
+                <p>Las TIC de Almacenamiento de Información se centran en las tecnologías y métodos utilizados para
+                    almacenar, gestionar y preservar datos e información de manera eficiente y segura. Estas tecnologías
+                    son esenciales en la era digital y tienen un impacto significativo en la forma en que se maneja la
+                    información. A continuación, se detallan algunos aspectos clave de las TIC de Almacenamiento de
+                    Información:</p>
+                <ul>
+                    <li><strong>Almacenamiento en la Nube:</strong> El almacenamiento en la nube permite a las
+                        organizaciones y usuarios almacenar datos de forma remota en servidores en línea. Servicios como
+                        Dropbox, Google Drive y AWS S3 son ejemplos de soluciones de almacenamiento en la nube.</li>
+                    <li><strong>Dispositivos de Almacenamiento:</strong> Los dispositivos de almacenamiento físicos como
+                        discos duros, unidades flash USB y tarjetas de memoria son fundamentales para almacenar datos de
+                        manera local y portátil.</li>
+                    <li><strong>Respaldo de Datos:</strong> El respaldo de datos es esencial para garantizar la
+                        protección de la información. Se realizan copias de seguridad periódicas para evitar la pérdida
+                        de datos en caso de fallos o incidentes.</li>
+                    <li><strong>Almacenamiento de Datos Empresariales:</strong> En entornos empresariales, se utilizan
+                        sistemas de almacenamiento de datos más avanzados, como almacenamiento en red (NAS) y
+                        almacenamiento de área de almacenamiento (SAN), para gestionar grandes volúmenes de información.
+                    </li>
+                    <li><strong>Seguridad de Datos:</strong> La seguridad de la información almacenada es crítica. Se
+                        implementan medidas de seguridad como cifrado de datos y control de acceso para proteger la
+                        integridad y la confidencialidad de los datos almacenados.</li>
+                    <li><strong>Recuperación de Datos:</strong> En caso de pérdida de datos, las TIC de Almacenamiento
+                        incluyen técnicas y herramientas de recuperación de datos para restaurar la información perdida
+                        o dañada.</li>
+                    <li><strong>Preservación Digital:</strong> En el ámbito cultural y académico, se utiliza la
+                        preservación digital para conservar registros históricos y documentos importantes a largo plazo.
+                    </li>
+                    <li><strong>Tendencias Futuras:</strong> El almacenamiento de información continúa evolucionando con
+                        tecnologías como el almacenamiento óptico, el almacenamiento en ADN y el almacenamiento
+                        cuántico, que prometen capacidades de almacenamiento aún mayores y una mayor durabilidad.</li>
+                </ul>
+            </details>
         </div>
         <div class="card">
-            <h3><a href="entretenimiento.html">TIC de Entretenimiento</a></h3>
+            <details>
+                <summary>TIC de Entretenimiento</summary>
+                <img src="telefonia-movil.jpg" alt="Telefonía Móvil">
+                <p>Las TIC de Entretenimiento engloban un conjunto de tecnologías y aplicaciones que ofrecen
+                    experiencias de entretenimiento digital a las personas. Estas tecnologías han transformado la forma
+                    en que consumimos contenido y nos divertimos en la era digital. A continuación, se detallan algunos
+                    aspectos clave de las TIC de Entretenimiento:</p>
+                <ul>
+                    <li><strong>Streaming de Video y Música:</strong> Plataformas como Netflix, YouTube, Spotify y
+                        Amazon Prime Video ofrecen acceso a una amplia variedad de contenido de video y música a través
+                        de Internet.</li>
+                    <li><strong>Juegos en Línea:</strong> Los juegos en línea, incluidos los videojuegos multijugador en
+                        línea y los juegos móviles, permiten a los jugadores interactuar y competir en tiempo real en
+                        todo el mundo.</li>
+                    <li><strong>Realidad Virtual (RV) y Realidad Aumentada (RA):</strong> Estas tecnologías ofrecen
+                        experiencias inmersivas en juegos y aplicaciones que combinan el mundo digital con el mundo
+                        real, creando nuevas formas de entretenimiento.</li>
+                    <li><strong>Plataformas de Transmisión en Vivo:</strong> Servicios como Twitch y Facebook Gaming
+                        permiten a los usuarios transmitir en vivo sus actividades de juego y entretenimiento,
+                        interactuando con una audiencia en tiempo real.</li>
+                    <li><strong>Contenido Interactivo:</strong> Las TIC de Entretenimiento incluyen contenido
+                        interactivo, como libros y películas interactivas, que permiten a los usuarios tomar decisiones
+                        que afectan la trama.</li>
+                    <li><strong>Educación y Entretenimiento:</strong> Se utilizan aplicaciones y plataformas de
+                        educación en línea que combinan elementos educativos con entretenimiento para un aprendizaje más
+                        atractivo.</li>
+                    <li><strong>Eventos Virtuales:</strong> La organización de eventos virtuales, como conciertos en
+                        línea y exposiciones virtuales, ha aumentado, brindando nuevas formas de entretenimiento desde
+                        la comodidad del hogar.</li>
+                    <li><strong>Tendencias Futuras:</strong> Las TIC de Entretenimiento continúan evolucionando con
+                        avances en gráficos 3D, experiencias de realidad virtual más inmersivas y la integración de la
+                        inteligencia artificial para personalizar el contenido de entretenimiento.</li>
+                </ul>
+            </details>
         </div>
+
+    </div>
     </div>
     <footer>
-        Wiki sobre la Tipología de las TIC &copy; 2023
+        Ruben De Jesus Farias de Alba
     </footer>
 </body>
+
 </html>
