--- a/Enviroment/http-folder/index.html
+++ b/Enviroment/http-folder/index.html
@@ -30,7 +30,7 @@
         <div class="card">
             <details>
                 <summary>TIC de Comunicación</summary>
-                <img src="telefonia-movil.jpg" alt="Telefonía Móvil">
+                <img src="../img/ticComunicaciones.jpg" alt="TIC de Comunicación">
                 <p>Las TIC de Comunicación se refieren a un conjunto de tecnologías que facilitan la transmisión de
                     información y la interacción entre individuos, grupos y sistemas. Estas tecnologías han
                     revolucionado la forma en que nos comunicamos y conectamos a nivel global, transformando la manera
@@ -69,7 +69,7 @@
         <div class="card">
             <details>
                 <summary>TIC de Procesamiento de Datos</summary>
-                <img src="telefonia-movil.jpg" alt="Telefonía Móvil">
+                <img src="../img/dataAnalisis.jpg" alt="TIC de Procesamiento de Datos">
                 <p>Las TIC de Procesamiento de Datos se centran en las tecnologías que permiten la recopilación, el
                     almacenamiento, el procesamiento y la gestión de información y datos. Estas tecnologías son
                     fundamentales en la era digital y tienen un impacto significativo en diversos campos. A
@@ -105,7 +105,7 @@
         <div class="card">
             <details>
                 <summary>TIC de Almacenamiento de Información</summary>
-                <img src="telefonia-movil.jpg" alt="Telefonía Móvil">
+                <img src="../img/storrageData.jpg" alt="TIC de Almacenamiento de Información">
                 <p>Las TIC de Almacenamiento de Información se centran en las tecnologías y métodos utilizados para
                     almacenar, gestionar y preservar datos e información de manera eficiente y segura. Estas tecnologías
                     son esenciales en la era digital y tienen un impacto significativo en la forma en que se maneja la
@@ -143,7 +143,7 @@
         <div class="card">
             <details>
                 <summary>TIC de Entretenimiento</summary>
-                <img src="telefonia-movil.jpg" alt="Telefonía Móvil">
+                <img src="entreteintmenttic.jpg" alt="TIC de Entretenimiento">
                 <p>Las TIC de Entretenimiento engloban un conjunto de tecnologías y aplicaciones que ofrecen
                     experiencias de entretenimiento digital a las personas. Estas tecnologías han transformado la forma
                     en que consumimos contenido y nos divertimos en la era digital. A continuación, se detallan algunos
