--- a/Enviroment/http-folder/index.html
+++ b/Enviroment/http-folder/index.html
@@ -143,7 +143,7 @@
         <div class="card">
             <details>
                 <summary>TIC de Entretenimiento</summary>
-                <img src="entreteintmenttic.jpg" alt="TIC de Entretenimiento">
+                <img src="../img/entreteintmenttic.jpg" alt="TIC de Entretenimiento">
                 <p>Las TIC de Entretenimiento engloban un conjunto de tecnologías y aplicaciones que ofrecen
                     experiencias de entretenimiento digital a las personas. Estas tecnologías han transformado la forma
                     en que consumimos contenido y nos divertimos en la era digital. A continuación, se detallan algunos
