--- a/Enviroment/http-folder/index.html
+++ b/Enviroment/http-folder/index.html
@@ -24,7 +24,7 @@
                 <img src="../img/introduccion.jpg" alt="Introducción a las TIC" width="300">
             </details>
         </div>
-    </div>    
+    </div>
     <div class="section">
         <h2>Clasificacion</h2>
         <div class="card">
@@ -173,6 +173,26 @@
                     <li><strong>Tendencias Futuras:</strong> Las TIC de Entretenimiento continúan evolucionando con
                         avances en gráficos 3D, experiencias de realidad virtual más inmersivas y la integración de la
                         inteligencia artificial para personalizar el contenido de entretenimiento.</li>
+                </ul>
+            </details>
+        </div>
+
+    </div>
+    <div class="section">
+        <h2>Referencias</h2>
+        <div class="card">
+            <details>
+                <summary>Referencias</summary>
+
+                <ul>
+                    <li>Universidads de Negocios ISEC. "¿Cómo se clasifican las tecnologías de la información y
+                        comunicación?" Recuperado de <a href="https://uneg.edu.mx/como-se-clasifican-las-tics/"
+                            target="_blank">https://uneg.edu.mx/como-se-clasifican-las-tics/</a></li>
+                    <li>Instituto Internacional de Planeamiento de la Educación de la UNESCO. "Tecnologías de la
+                        información y la comunicación (TICs) en la educación" Recuperado de <a
+                            href="https://learningportal.iiep.unesco.org/es/fichas-praticas/mejorar-el-aprendizaje/tecnologias-de-la-informacion-y-la-comunicacion-tics-en-la"
+                            target="_blank">https://learningportal.iiep.unesco.org/es/fichas-praticas/mejorar-el-aprendizaje/tecnologias-de-la-informacion-y-la-comunicacion-tics-en-la</a>
+                    </li>
                 </ul>
             </details>
         </div>
